--- a/src/app/calendar/calendar.css
+++ b/src/app/calendar/calendar.css
@@ -194,6 +194,7 @@
   font-weight: 500;
   cursor: pointer;
   transition: all 0.2s;
+  color: #000000;
 }
 
 .fc-event:hover {
@@ -205,12 +206,14 @@
 .fc-event-title {
   font-weight: 600;
   line-height: 1.2;
+  color: #000000;
 }
 
 .fc-event-time {
   font-size: 0.75rem;
   font-weight: 500;
   margin-right: 4px;
+  color: #000000;
 }
 
 /* Remove default event dots */
