--- a/src/app/components/navBar/navBar.module.css
+++ b/src/app/components/navBar/navBar.module.css
@@ -1,31 +1,31 @@
-.navBar {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 72px;
-    display: flex;
-    align-items: center;
-    padding: 0 20px; /* Optional */
-    z-index: 500
-  }
-.whiteBg {
-    background-color: white;
-    color: black;
+.navigation-bar-container {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 72px;
+  display: flex;
+  align-items: center;
+  padding: 0 20px; /* Optional */
+  z-index: 500;
+}
+.white-background-theme {
+  background-color: white;
+  color: black;
 }
 
-.purpleBg {
-    background-color: #48316F;
-    color: white;
+.purple-background-theme {
+  background-color: #48316f;
+  color: white;
 }
-.img{
-    height: 100%;
-    width: auto;
-    cursor: pointer;
+.logo-image {
+  height: 100%;
+  width: auto;
+  cursor: pointer;
 }
-.homeIcon{
+.home-navigation-icon {
   width: 30px;
   height: 30px;
   margin-left: 10vw;
@@ -33,44 +33,44 @@
   fill: currentColor;
   cursor: pointer;
 }
-.profileSection{
-    margin-left: auto;
-    display: flex;
-    right: 80px;
-    top:40px;
-    z-index: 600;
+.user-profile-section {
+  margin-left: auto;
+  display: flex;
+  right: 80px;
+  top: 40px;
+  z-index: 600;
 }
-.loginBtn{
+.login-button {
   background-color: #febd11;
   border-radius: 5px;
   height: 50px;
   width: 100px;
   color: #2c2c54; /* Dark plum */
 }
-@media screen and (max-width:800px) {
-  .homeIcon{
+@media screen and (max-width: 800px) {
+  .home-navigation-icon {
     margin-left: 5vw;
   }
-  .img{
+  .logo-image {
     height: 90%;
   }
 }
-@media screen and (max-width:600px) {
-  .homeIcon{
+@media screen and (max-width: 600px) {
+  .home-navigation-icon {
     margin-left: 0;
     width: 25px;
     height: 25px;
   }
-  .img{
+  .logo-image {
     height: 80%;
   }
 }
-.links{
+.navigation-links-container {
   display: flex;
   gap: 12px;
   margin-left: 16px;
 }
-.linkBtn{
+.navigation-link-button {
   background-color: transparent;
   color: inherit;
   border: 1px solid currentColor;
@@ -78,4 +78,3 @@
   padding: 8px 12px;
   cursor: pointer;
 }
-  
