--- a/src/app/home-page.module.css
+++ b/src/app/home-page.module.css
@@ -77,7 +77,7 @@
 
 .heroButtonPrimary {
   background-color: #febd11;
-  color: white;
+  color: black;
   border-radius: 0.5rem;
   padding: 0.75rem 2rem;
   font-family: 'Kanit', sans-serif;
@@ -375,7 +375,7 @@
 .formSubmitButton {
   width: 100%;
   background-color: #febd11;
-  color: white;
+  color: black;
   border-radius: 0.5rem;
   padding: 0.75rem 2rem;
   font-family: 'Kanit', sans-serif;
